--- a/app/src/main/res/layout/users_view.xml
+++ b/app/src/main/res/layout/users_view.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#e6e6e6"
     android:orientation="horizontal"
     android:weightSum="100">
@@ -12,21 +12,23 @@
     <TextView
         android:id="@+id/userView"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="49dp"
+        android:layout_marginRight="49dp"
         android:text="UserName"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImg"
         android:layout_width="41dp"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_toEndOf="@id/userView"
-        android:layout_toRightOf="@id/userView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:background="@mipmap/ic_launcher_round"
         android:gravity="center"
         android:textAlignment="center" />
@@ -54,6 +56,7 @@
         android:layout_alignBottom="@+id/profileImg"
         android:layout_alignRight="@id/profileImg"
         android:layout_alignStart="@+id/profileImg"
+        android:layout_alignLeft="@id/profileImg"
         android:layout_weight="10"
         android:gravity="center"
         android:src="@mipmap/ic_launcher_round"
