--- a/app/src/main/res/drawable/backgroud_left.xml
+++ b/app/src/main/res/drawable/backgroud_left.xml
@@ -5,5 +5,5 @@
     <corners android:radius="10dp"
         android:topLeftRadius="0dp"/>
 
-    <solid android:color="@color/white"/>
+    <solid android:color="#A9A9A9"/>
 </shape>
