--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -22,8 +22,8 @@
         android:layout_toRightOf="@+id/profileImg"
         android:background="@drawable/backgroud_left"
         android:padding="5dp"
-        android:text="hello"
-        android:textSize="25dp" />
+        android:textSize="20sp"
+        />
 
     <TextView
         android:id="@+id/seenTxt"
