--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -19,7 +19,7 @@
             />
         <TextView
             android:id="@+id/show_msg"
-            android:textSize="25dp"
+            android:textSize="20sp"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
