--- a/app/src/main/res/layout/users_view.xml
+++ b/app/src/main/res/layout/users_view.xml
@@ -14,10 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="49dp"
-        android:layout_marginRight="49dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="48dp"
+        android:layout_marginTop="12dp"
         android:text="UserName"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -65,7 +64,18 @@
         app:civ_border_color="#bfbfbf"
         app:civ_border_width="10dp" />
 
-
+    <TextView
+        android:id="@+id/lastMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="61dp"
+        android:layout_marginRight="20dp"
+        android:maxLines="1"
+        android:paddingTop="35dp"
+        android:textColor="@color/colorPrimaryDark" />
 </RelativeLayout>
 
 
