--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".usersFragment">
+    tools:context=".fragments.usersFragment">
 
     <EditText
         android:layout_width="match_parent"
@@ -20,5 +20,5 @@
         android:layout_height="500dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        tools:context=".usersFragment" />
+        tools:context=".fragments.usersFragment" />
 </RelativeLayout>
