--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,6 +5,12 @@
     tools:showIn="navigation_view">
 
     <item
+        android:id="@+id/Home"
+        android:title="Home">
+
+    </item>
+
+    <item
         android:id="@+id/profile"
         android:title="Profile">
 
