--- a/app/src/main/res/layout/journal_view.xml
+++ b/app/src/main/res/layout/journal_view.xml
@@ -4,28 +4,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="190dp"
-    android:background="#e6e6e6"
+
+    android:background="@drawable/cutsom_border"
     android:orientation="horizontal"
     android:weightSum="100">
 
 
     <TextView
-        android:id="@+id/dateView"
+        android:id="@+id/dateV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/tags"
-        android:layout_alignRight="@+id/tags"
+        android:layout_alignEnd="@+id/journalContent"
         android:layout_alignParentTop="true"
-        android:textColor="@color/colorPrimary"
         android:layout_marginTop="12dp"
         android:text="July 11th 2019"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/journalContent"
         android:layout_width="348dp"
-        android:layout_height="102dp"
+        android:layout_height="112dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -34,24 +34,5 @@
         android:layout_marginTop="46dp"
         android:textSize="@dimen/text_size_medium" />
 
-    <TextView
-        android:id="@+id/tags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginRight="29dp"
-        android:text="#blessed"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
 
 </RelativeLayout>
-
-
-
-
-
