--- a/app/src/main/res/layout/loginhome.xml
+++ b/app/src/main/res/layout/loginhome.xml
@@ -49,13 +49,13 @@
             android:text="Sign in with Email"
             android:textColor="#fff" />
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Google sign in" />
+        <!--<com.google.android.gms.common.SignInButton-->
+            <!--android:id="@+id/sign_in_button"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:text="Google sign in" />-->
 
         <TextView
 
