--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -32,7 +32,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/profileImg"
-                android:background="@mipmap/ic_launcher_round"/>
+                android:background="@drawable/ic_person_black_24dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -88,35 +88,16 @@
                 android:textSize="@dimen/text_size_medium"/>
         </RelativeLayout>
 
+
         <Button
             android:id="@+id/addInfo"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_marginTop="420dp"
+            android:layout_marginTop="440dp"
+            android:layout_below="@+id/journalContentItem"
             android:background="@color/colorAccent"
             android:gravity="center"
             android:text="Edit Information"
-            android:textColor="#fff" />
-
-        <Button
-            android:id="@+id/changePic"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="450dp"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:text="Select Profile Picture"
-            android:textColor="#fff" />
-
-
-        <Button
-            android:id="@+id/uploadPic"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="480dp"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:text="Upload Selected Profile Picture"
             android:textColor="#fff" />
     </android.support.v7.widget.CardView>
 
