--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/textGrid"
-        android:text="My Mental Health"
+        android:text="Final Step"
         android:textSize="34dp"
         android:layout_centerInParent="true"
         android:textColor="#ffffff"
@@ -28,17 +28,6 @@
         android:orientation="vertical"
         android:paddingTop="100dp"
         app:layout_constraintTop_toTopOf="parent">
-
-         <EditText
-        android:id="@+id/userName"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:background="@drawable/edittextstyle"
-        android:hint="Username"
-             android:maxLines="1"
-        android:textColor="#fff"
-        android:textColorHint="#fff" />
 
         <EditText
             android:id="@+id/RegEmail"
