--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/textGrid"
-        android:text="Final Step"
+        android:text="Register"
         android:textSize="34dp"
         android:layout_centerInParent="true"
         android:textColor="#ffffff"
