--- a/app/src/main/res/layout-v21/music_player.xml
+++ b/app/src/main/res/layout-v21/music_player.xml
@@ -21,9 +21,8 @@
         android:layout_width="210dp"
         android:layout_height="170dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="90dp"
         android:src="@drawable/music1"
-        android:layout_marginStart="90dp" />
+        android:layout_gravity="center" />
 
     <TextView
         android:id="@+id/songName"
@@ -40,66 +39,71 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:text="Artist" />
-
     <SeekBar
         android:id="@+id/seekBarPlayer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="90dp" />
+        android:layout_gravity="center"
+        />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp">
 
-        <TextView
-            android:id="@+id/timeLapsed"
-            android:layout_width="50dp"
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:text="0:00"
-            android:layout_marginStart="70dp" />
+            android:layout_gravity="center">
+            <!--android:layout_marginLeft="170dp"-->
+            <!--android:layout_marginStart="170dp"-->
+            <TextView
+                android:id="@+id/timeLapsed"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
 
-        <TextView
-            android:id="@+id/timeRemain"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="190dp"
-            android:text="-1:50"
-            android:layout_marginStart="190dp" />
-    </LinearLayout>
+                android:text="0:00" />
+            <!--android:layout_marginLeft="170dp"-->
+            <!--android:layout_marginStart="170dp"-->
+            <TextView
+                android:id="@+id/timeRemain"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
 
-    <LinearLayout
+                android:text="-1:50" />
+        </LinearLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp">
 
         <Button
             android:id="@+id/previous"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="110dp"
-            android:background="@drawable/prev"
-            android:gravity="center"
-            android:layout_marginStart="90dp" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="46dp"
+            android:background="@drawable/prev" />
 
         <Button
             android:id="@+id/playBtn"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/play_btn"
-            android:gravity="center" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/play_btn" />
 
         <Button
             android:id="@+id/next"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/next"
-            android:gravity="center" />
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="46dp"
+            android:background="@drawable/next" />
+    </RelativeLayout>
 
 </LinearLayout>
