--- a/app/src/main/res/layout-v21/music_player.xml
+++ b/app/src/main/res/layout-v21/music_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -48,30 +49,34 @@
         />
 
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/timeLapsed"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <!--android:layout_marginLeft="170dp"-->
-            <!--android:layout_marginStart="170dp"-->
-            <TextView
-                android:id="@+id/timeLapsed"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+            android:layout_marginLeft="44dp"
+            android:layout_marginStart="44dp"
+            android:text="0:00"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
 
-                android:text="0:00" />
-            <!--android:layout_marginLeft="170dp"-->
-            <!--android:layout_marginStart="170dp"-->
-            <TextView
-                android:id="@+id/timeRemain"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-
-                android:text="-1:50" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/timeRemain"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="-1:50"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.855"
+            app:layout_constraintStart_toEndOf="@+id/timeLapsed"
+            tools:layout_editor_absoluteY="0dp" />
+    </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
