--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -19,7 +19,7 @@
             android:id="@+id/sendEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Please Enter your Email"
+            android:hint="@string/please_enter_your_email"
             android:inputType="textEmailAddress"
             app:met_floatingLabel="normal"
             android:layout_marginTop="20dp">
@@ -29,7 +29,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reset"
+            android:text="@string/reset"
             android:id="@+id/resetBtn"
             android:textColor="#ffffff"
             android:background="@color/colorAccent"
@@ -43,7 +43,7 @@
             android:layout_marginTop="15dp"
             android:textColor="#000000"
             android:textSize="15dp"
-            android:text="By clicking RESET, you will receive an email to reset your password"/>
+            android:text="@string/by_clicking_reset_you_will_receive_an_email_to_reset_your_password"/>
 
 
     </LinearLayout>
