--- a/app/src/main/res/layout/home_page2.xml
+++ b/app/src/main/res/layout/home_page2.xml
@@ -37,7 +37,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
-                android:text="My Mental Health"
+                android:text="@string/my_mental_health"
                 android:textColor="#ffffff"
                 android:textSize="34dp" />
         </RelativeLayout>
@@ -83,7 +83,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="CHAT"
+                        android:text="@string/chat"
                         android:textSize="20dp" />
 
                 </LinearLayout>
@@ -117,7 +117,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="JOURNAL"
+                        android:text="@string/journal"
                         android:textSize="20dp" />
                 </LinearLayout>
 
@@ -154,7 +154,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="AUDIO"
+                        android:text="@string/audio"
                         android:textSize="20dp" />
                 </LinearLayout>
 
@@ -189,7 +189,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SUPPORT"
+                        android:text="@string/support"
                         android:textSize="20dp" />
 
                 </LinearLayout>
