--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/please_enter_your_email"
+            android:maxLines="1"
             android:inputType="textEmailAddress"
             app:met_floatingLabel="normal"
             android:layout_marginTop="20dp">
