--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingTop="100dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:maxLines="1">
 
         <EditText
             android:id="@+id/RegEmail"
@@ -48,6 +49,7 @@
             android:background="@drawable/edittextstyle"
             android:hint="@string/password"
             android:inputType="textPassword"
+            android:maxLines="1"
             android:paddingTop="10dp"
             android:textColor="#fff"
             android:textColorHint="#fff" />
